--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 <body>
 
   <div class="qr-card">
-
     <div>
       <img src="images/image-qr-code.png" class="qr-img" alt="qr code">
     </div>
+    <div>
+      <h2 class="qr-text-top">
+        Improve your front-end <br>skills by building projects
+      </h2>
+      <p class="qr-text-btm">
+        Scan the QR code to visit Frontend<br> Mentor and take your coding skills to<br>the next level
+      </p>
+    </div>
 
-    <div class="qr-text-top">
-      Improve your front-end <br>skills by building projects
-      <br>
-    </div>
-    <div class="qr-text-btm">
-      Scan the QR code to visit Frontend<br> Mentor and take your coding skills to<br>the next level
-    </div>
   </div>
 
 
